test_regress/t/t_parse_eof_qqq_bad.out
%Error: t/t_parse_eof_qqq_bad.v:7:1: EOF in unterminated """ string
    7 | """
      | ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
